--- a/oversea.html
+++ b/oversea.html
@@ -75,9 +75,9 @@
 <!-- Swiper -->
 <div class="swiper mySwiper banner">
     <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="./images/oversea/banner_sypan.jpg" alt="사이판배너"></div>
-        <div class="swiper-slide"><img src="./images/oversea/banner_pack.jpg" alt="패키지배너"></div>
-        <div class="swiper-slide"><img src="./images/oversea/banner_earlybird.jpg" alt="얼리버드배너"></div>
+        <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_sypan.jpg" alt="사이판배너"></a></div>
+        <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_pack.jpg" alt="패키지배너"></a></div>
+        <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_earlybird.jpg" alt="얼리버드배너"></a></div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
