--- a/domestic.html
+++ b/domestic.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1450px">
+    <meta name="viewport" content="width=1600px">
     <title>국내여행</title>
     <link rel="stylesheet" href="./css/domestic.css">
     <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css" rel="stylesheet">
@@ -75,15 +75,18 @@
 
 
 <!-- Swiper -->
-<div class="swiper mySwiper banner">
+<div id="arrow_relativ">
+<div class="swiper mySwiper banner card4_out">
     <div class="swiper-wrapper">
         <div class="swiper-slide"><a href="#"><img src="./images/domestic/domestic_main_banner1.jpg" alt="배너1"></a></div>
         <div class="swiper-slide"><a href="#"><img src="./images/domestic/domestic_main_banner2.jpg" alt="배너2"></a></div>
         <div class="swiper-slide"><a href="#"><img src="./images/domestic/domestic_main_banner3.jpg" alt="배너3"></a></div>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+
     <div class="swiper-pagination"></div>
+</div>
+<div class="swiper-button-next card4_out_next"></div>
+<div class="swiper-button-prev card4_out_prev"></div>
 </div>
 
     <!-- Swiper 끝 -->
