--- a/oversea.html
+++ b/oversea.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1450px">
+    <meta name="viewport" content="width=1625px">
     <title>해외여행</title>
     <link rel="stylesheet" href="./css/oversea.css">
     <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUITE/fonts/variable/woff2/SUITE-Variable.css" rel="stylesheet">
@@ -73,15 +73,18 @@
 
 
 <!-- Swiper -->
-<div class="swiper mySwiper banner">
+<div id="arrow_relativ">
+<div class="swiper mySwiper banner card4_out">
     <div class="swiper-wrapper">
         <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_sypan.jpg" alt="사이판배너"></a></div>
         <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_pack.jpg" alt="패키지배너"></a></div>
         <div class="swiper-slide"><a href="#"><img src="./images/oversea/banner_earlybird.jpg" alt="얼리버드배너"></a></div>
     </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
+
     <div class="swiper-pagination"></div>
+</div>
+<div class="swiper-button-next card4_out_next"></div>
+<div class="swiper-button-prev card4_out_prev"></div>
 </div>
 
     <!-- Swiper 끝 -->
