--- a/domestic.html
+++ b/domestic.html
@@ -130,8 +130,7 @@
 
 
     <h5 id="deal">타임딜</h5>
-    <div class="time_banner"><img src="./images/domestic/timedeal_banner.jpg" alt="타임딜 배너">
-</div>
+    <div class="time_banner"></div>
 
 <div class="time_deal">
 
@@ -506,7 +505,7 @@
  <div id="discount">
     <h5 id="deal">할인 및 혜택</h5>
 
-    <img src="./images/domestic/discount_banner.jpg" alt="discount banner">
+    <div class="discount_banner"></div>
 
     <div class="dis_box">
         <div class="dis_card">
